@@ -1,1 +1,14 @@
 # Bebe-Calculus
+
+
+Pour lancer mon application il faut avoir la librairi javfx installer sur son pc.
+Pour lancer le .jar:
+
+On execute la commande: java -jar --module-path <chemin> --add-modules javafx.controls calculus.jar
+Où <chemin> est le chemin complet du répertoire lib contenant JavaFX par exemple "C:\....\javafx-sdk-20.0.1\lib"
+
+Pour lancé le code depuis un IDE:
+Il faut aussi mettre la ligne --module-path <chemin> --add-modules javafx.controls dans la partie VM arguments dans la Run configuration.
+
+
+Je suis désolé que vous devez faire ceci pour devoir lancer mon application, je n'ai pas réussi a trouver le moyen de faire autrement.
